--- a/hw03.html
+++ b/hw03.html
@@ -55,7 +55,8 @@ a:active {color:#FFEE99;}
 
 <div id="footer">
 	<span style="font-size:80%;"><address><a href="phone:+886975847297">+886975847297</a></address></span>
-	<audio controls loop>
+	<iframe src="silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+	<audio controls autoplay loop>
 	<source src="王艷薇 - 保存期限.mp3" type="audio/mpeg" Loop=true>
 	</audio>
 </div>
